--- a/fr/activities.html
+++ b/fr/activities.html
@@ -12,6 +12,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/languages.min.css"/>
 
     <!-- Custom styles for this template -->
     <link href="/css/narrow.css" rel="stylesheet">
@@ -26,7 +27,19 @@
   </head>
 
   <body>
+    <div style="text-align: center; padding: 20px;">
+      <a href="/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full active" lang="en"></span>
+      </a>
 
+      <a href="/fr/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full" lang="fr"></span>
+      </a>
+
+      <a href="/it/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full" lang="it"></span>
+      </a>
+    </div>
     <div class="container">
       <div class="header clearfix">
         <nav>
@@ -38,12 +51,12 @@
             <li role="presentation"><a href="mailto:contact@italynewenergy.net">Contact</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted"><img src="img/logo.gif"></h3>
+        <h3 class="text-muted"><img src="/img/logo.gif"></h3>
       </div>
 
       <ol class="breadcrumb">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="activites.html" class="active">Activities</a></li>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="activites.html" class="active">Activités</a></li>
       </ol>
       <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
               <ol class="carousel-indicators">
@@ -52,18 +65,18 @@
               </ol>
               <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                  <img src="img/visual.jpg" />
+                  <img src="/img/visual.jpg" />
                 </div>
               </div>
             </div>
             <div class="page-header">
-              <h1>Activites</h1>
+              <h1>Activités</h1>
             </div>
 
 
 <ul class="nav nav-pills">
-  <li class="active"><a data-toggle="pill" href="#home">Energy</a></li>
-  <li><a data-toggle="pill" href="#menu1">Gas</a></li>
+  <li class="active"><a data-toggle="pill" href="#home">Énergie</a></li>
+  <li><a data-toggle="pill" href="#menu1">Gaz</a></li>
   <li><a data-toggle="pill" href="#menu2">Services</a></li>
 </ul>
 
@@ -107,6 +120,18 @@ Italie New Energy est un grossiste sur le marché de l'énergie électrique ital
       </footer>
 
     </div> <!-- /container -->
+    <div style="text-align: center; padding: 20px;">
+      <a href="/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full active" lang="en"></span>
+      </a>
 
+      <a href="/fr/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full" lang="fr"></span>
+      </a>
+
+      <a href="/it/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full" lang="it"></span>
+      </a>
+    </div>
   </body>
 </html>
