--- a/fr/company.html
+++ b/fr/company.html
@@ -11,10 +11,11 @@
     <title>Italy New Energy</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/narrow.css" rel="stylesheet">
+    <link href="/css/narrow.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/languages.min.css"/>
 
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -25,7 +26,19 @@
   </head>
 
   <body>
+    <div style="text-align: center; padding: 20px;">
+      <a href="/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full active" lang="en"></span>
+      </a>
 
+      <a href="/fr/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full" lang="fr"></span>
+      </a>
+
+      <a href="/it/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full" lang="it"></span>
+      </a>
+    </div>
     <div class="container">
       <div class="header clearfix">
         <nav>
@@ -37,7 +50,7 @@
             <li role="presentation"><a href="mailto:contact@italynewenergy.net">Contact</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted"><img src="img/logo.gif"></h3>
+        <h3 class="text-muted"><img src="/img/logo.gif"></h3>
       </div>
 
       <ol class="breadcrumb">
@@ -51,7 +64,7 @@
               </ol>
               <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                  <img src="img/visual.jpg" />
+                  <img src="/img/visual.jpg" />
                 </div>
               </div>
             </div>
@@ -79,5 +92,18 @@
       </footer>
 
     </div> <!-- /container -->
+    <div style="text-align: center; padding: 20px;">
+      <a href="/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full active" lang="en"></span>
+      </a>
+
+      <a href="/fr/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full" lang="fr"></span>
+      </a>
+
+      <a href="/it/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full" lang="it"></span>
+      </a>
+    </div>
   </body>
 </html>
