--- a/fr/index.html
+++ b/fr/index.html
@@ -26,18 +26,17 @@
 
   <body>
     <div style="text-align: center; padding: 20px;">
-      <button type="button" class="btn btn-default btn-sm">
+      <a href="/index.html" type="button" class="btn btn-default btn-sm">
         <span class="lang-sm lang-lbl-full active" lang="en"></span>
-      </button>
+      </a>
 
-      <button type="button" class="btn btn-default btn-sm">
+      <a href="/fr/index.html" type="button" class="btn btn-default btn-sm">
         <span class="lang-sm lang-lbl-full" lang="fr"></span>
-      </button>
+      </a>
 
-      <button type="button" class="btn btn-default btn-sm">
+      <a href="/it/index.html" type="button" class="btn btn-default btn-sm">
         <span class="lang-sm lang-lbl-full" lang="it"></span>
-      </button>
-
+      </a>
     </div>
 
     <div class="container">
@@ -51,28 +50,27 @@
             <li role="presentation"><a href="mailto:contact@italynewenergy.net">Contact</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted"><img src="img/logo.gif"></h3>
+        <h3 class="text-muted"><img src="/img/logo.gif"></h3>
       </div>
 
 
 <ol class="breadcrumb">
-  <li><a href="#" class="active">Home</a></li>
+  <li><a href="#" class="active">Accueil</a></li>
 </ol>
 
 
       <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
               <ol class="carousel-indicators">
                 <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-
               </ol>
               <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                  <img src="img/visual.jpg" />
+                  <img src="/img/visual.jpg" />
                 </div>
               </div>
             </div>
             <div class="page-header">
-              <h1>Italy New Energy <small class="blue">Profile</small></h1>
+              <h1>Italy New Energy <small class="blue">profil</small></h1>
             </div>
 
             <p>
@@ -84,35 +82,36 @@
               <h1>Nouvelles et faits saillants <small class="blue">l'énergie verte</small></h1>
             </div>
 
-<div class="media">
-<div class="media-left">
-<a href="#">
-  <img class="media-object" alt="64x64" src="img/plant.jpg" data-holder-rendered="true" style="width: 300px;">
-</a>
-</div>
-<div class="media-body">
-<h4 class="media-heading">Les émissions mondiales de carbone décrochage en 2014</h4>
-<p>
-Les émissions mondiales de réchauffement climatique-dioxyde de carbone n'a pas augmenté l'année dernière pour la première fois en 40 ans sans la présence d'une crise économique.
-Dans un signe que les efforts pour lutter contre le changement climatique peut avoir été plus efficace que la pensée, l'Agence internationale de l'énergie a trouvé les émissions mondiales de dioxyde de carbone, le principal gaz à effet de serre, n'a pas augmenté en 2014.
-</p>
-</p>
-<p><a href="http://www.ft.com/cms/s/0/1f56f0d2-c8cc-11e4-8617-00144feab7de.html#axzz3ghSKiBJs" target="_blank">En savoir plus...</a></p>
-</div>
-</div>
+    
+            <div class="media">
+            <div class="media-left">
+        <a href="http://www.ft.com/cms/s/0/1f56f0d2-c8cc-11e4-8617-00144feab7de.html#axzz3ghSKiBJs" target="_blank">
+              <img class="media-object" alt="64x64" src="/img/plant.jpg" data-holder-rendered="true" style="width: 300px;">
+            </a>
+            </div>
+            <div class="media-body">
+            <h4 class="media-heading">Les émissions mondiales de carbone décrochage en 2014</h4>
+            <p>
+            Les émissions mondiales de réchauffement climatique-dioxyde de carbone n'a pas augmenté l'année dernière pour la première fois en 40 ans sans la présence d'une crise économique.
+            Dans un signe que les efforts pour lutter contre le changement climatique peut avoir été plus efficace que la pensée, l'Agence internationale de l'énergie a trouvé les émissions mondiales de dioxyde de carbone, le principal gaz à effet de serre, n'a pas augmenté en 2014.
+            </p>
+            </p>
+            <p><a href="http://www.ft.com/cms/s/0/1f56f0d2-c8cc-11e4-8617-00144feab7de.html#axzz3ghSKiBJs" target="_blank">En savoir plus...</a></p>
+            </div>
+            </div>
 
-<div class="media">
-<div class="media-left">
-<a href="#">
-<img class="media-object" alt="64x64" src="img/solar.png" data-holder-rendered="true" style="width: 300px;">
-</a>
-</div>
-<div class="media-body">
-<h4 class="media-heading">Utilitaire solaire peut coûter moins cher, mais il est également intéressant Moins</h4>
-<p>John Farrell conteste une nouvelle étude montrant que l'énergie solaire est l'option la moins chère.</p>
-<p><a href="http://www.greentechmedia.com/articles/read/utility-solar-may-cost-less-but-its-also-worth-less" target="_blank">En savoir plus...</a></p>
-</div>
-</div>
+            <div class="media">
+            <div class="media-left">
+            <a href="http://www.greentechmedia.com/articles/read/utility-solar-may-cost-less-but-its-also-worth-less" target="_blank">
+            <img class="media-object" alt="64x64" src="/img/solar.png" data-holder-rendered="true" style="width: 300px;">
+            </a>
+            </div>
+            <div class="media-body">
+            <h4 class="media-heading">Utilitaire solaire peut coûter moins cher, mais il est également intéressant Moins</h4>
+            <p>John Farrell conteste une nouvelle étude montrant que l'énergie solaire est l'option la moins chère.</p>
+            <p><a href="http://www.greentechmedia.com/articles/read/utility-solar-may-cost-less-but-its-also-worth-less" target="_blank">En savoir plus...</a></p>
+            </div>
+            </div>
 
 
       <div class="row marketing">
@@ -129,20 +128,18 @@ Dans un signe que les efforts pour lutter contre le changement climatique peut a
     </div> <!-- /container -->
 
     <div style="text-align: center; padding: 20px;">
-      <button type="button" class="btn btn-default btn-sm">
+      <a href="/index.html" type="button" class="btn btn-default btn-sm">
         <span class="lang-sm lang-lbl-full active" lang="en"></span>
-      </button>
+      </a>
 
-      <button type="button" class="btn btn-default btn-sm">
+      <a href="/fr/index.html" type="button" class="btn btn-default btn-sm">
         <span class="lang-sm lang-lbl-full" lang="fr"></span>
-      </button>
+      </a>
 
-      <button type="button" class="btn btn-default btn-sm">
+      <a href="/it/index.html" type="button" class="btn btn-default btn-sm">
         <span class="lang-sm lang-lbl-full" lang="it"></span>
-      </button>
-
+      </a>
     </div>
-
 
   </body>
 </html>
