--- a/fr/news.html
+++ b/fr/news.html
@@ -15,6 +15,7 @@
 
     <!-- Custom styles for this template -->
     <link href="/css/narrow.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/languages.min.css"/>
 
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -25,7 +26,19 @@
   </head>
 
   <body>
+    <div style="text-align: center; padding: 20px;">
+      <a href="/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full active" lang="en"></span>
+      </a>
 
+      <a href="/fr/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full" lang="fr"></span>
+      </a>
+
+      <a href="/it/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full" lang="it"></span>
+      </a>
+    </div>
     <div class="container">
       <div class="header clearfix">
         <nav>
@@ -37,7 +50,7 @@
             <li role="presentation"><a href="mailto:contact@italynewenergy.net">Contact</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted"><img src="img/logo.gif"></h3>
+        <h3 class="text-muted"><img src="/img/logo.gif"></h3>
       </div>
 
       <ol class="breadcrumb">
@@ -51,42 +64,43 @@
               </ol>
               <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                  <img src="img/visual.jpg" />
+                  <img src="/img/visual.jpg" />
                 </div>
               </div>
             </div>
 
             <div class="page-header">
-              <h1>News and Highlights <small class="blue">Green energy</small></h1>
+              <h1>Nouvelles et faits saillants <small class="blue">l'énergie verte</small></h1>
+            </div>
+            <div class="media">
+            <div class="media-left">
+        <a href="http://www.ft.com/cms/s/0/1f56f0d2-c8cc-11e4-8617-00144feab7de.html#axzz3ghSKiBJs" target="_blank">
+              <img class="media-object" alt="64x64" src="/img/plant.jpg" data-holder-rendered="true" style="width: 300px;">
+            </a>
+            </div>
+            <div class="media-body">
+            <h4 class="media-heading">Les émissions mondiales de carbone décrochage en 2014</h4>
+            <p>
+            Les émissions mondiales de réchauffement climatique-dioxyde de carbone n'a pas augmenté l'année dernière pour la première fois en 40 ans sans la présence d'une crise économique.
+            Dans un signe que les efforts pour lutter contre le changement climatique peut avoir été plus efficace que la pensée, l'Agence internationale de l'énergie a trouvé les émissions mondiales de dioxyde de carbone, le principal gaz à effet de serre, n'a pas augmenté en 2014.
+            </p>
+            </p>
+            <p><a href="http://www.ft.com/cms/s/0/1f56f0d2-c8cc-11e4-8617-00144feab7de.html#axzz3ghSKiBJs" target="_blank">En savoir plus...</a></p>
+            </div>
             </div>
 
-<div class="media">
-<div class="media-left">
-<a href="#">
-  <img class="media-object" alt="64x64" src="img/plant.jpg" data-holder-rendered="true" style="width: 300px;">
-</a>
-</div>
-<div class="media-body">
-<h4 class="media-heading">Global carbon emissions stall in 2014</h4>
-<p>Global emissions of climate-warming carbon dioxide did not rise last year for the first time in 40 years without the presence of an economic crisis.
-In a sign that efforts to tackle climate change may have been more effective than thought, the International Energy Agency found global emissions of carbon dioxide, the leading greenhouse gas, did not rise in 2014.</p>
-</p>
-<p><a href="http://www.ft.com/cms/s/0/1f56f0d2-c8cc-11e4-8617-00144feab7de.html#axzz3ghSKiBJs" target="_blank">Read more...</a></p>
-</div>
-</div>
-
-<div class="media">
-<div class="media-left">
-<a href="#">
-<img class="media-object" alt="64x64" src="img/solar.png" data-holder-rendered="true" style="width: 300px;">
-</a>
-</div>
-<div class="media-body">
-<h4 class="media-heading">Utility Solar May Cost Less, But It’s Also Worth Less</h4>
-<p>John Farrell disputes a new study showing that utility-scale solar is the cheapest option.    </p>
-<p><a href="http://www.greentechmedia.com/articles/read/utility-solar-may-cost-less-but-its-also-worth-less" target="_blank">Read more...</a></p>
-</div>
-</div>
+            <div class="media">
+            <div class="media-left">
+            <a href="http://www.greentechmedia.com/articles/read/utility-solar-may-cost-less-but-its-also-worth-less" target="_blank">
+            <img class="media-object" alt="64x64" src="/img/solar.png" data-holder-rendered="true" style="width: 300px;">
+            </a>
+            </div>
+            <div class="media-body">
+            <h4 class="media-heading">Utilitaire solaire peut coûter moins cher, mais il est également intéressant Moins</h4>
+            <p>John Farrell conteste une nouvelle étude montrant que l'énergie solaire est l'option la moins chère.</p>
+            <p><a href="http://www.greentechmedia.com/articles/read/utility-solar-may-cost-less-but-its-also-worth-less" target="_blank">En savoir plus...</a></p>
+            </div>
+            </div>
 
 
       <div class="row marketing">
@@ -101,6 +115,18 @@ In a sign that efforts to tackle climate change may have been more effective tha
       </footer>
 
     </div> <!-- /container -->
+    <div style="text-align: center; padding: 20px;">
+      <a href="/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full active" lang="en"></span>
+      </a>
 
+      <a href="/fr/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full" lang="fr"></span>
+      </a>
+
+      <a href="/it/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full" lang="it"></span>
+      </a>
+    </div>
   </body>
 </html>
