--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
       <a href="/it/index.html" type="button" class="btn btn-default btn-sm">
         <span class="lang-sm lang-lbl-full" lang="it"></span>
       </a>
-
     </div>
 
     <div class="container">
@@ -125,18 +124,17 @@ In a sign that efforts to tackle climate change may have been more effective tha
     </div> <!-- /container -->
 
     <div style="text-align: center; padding: 20px;">
-      <button type="button" class="btn btn-default btn-sm">
+      <a href="/index.html" type="button" class="btn btn-default btn-sm">
         <span class="lang-sm lang-lbl-full active" lang="en"></span>
-      </button>
+      </a>
 
-      <button type="button" class="btn btn-default btn-sm">
+      <a href="/fr/index.html" type="button" class="btn btn-default btn-sm">
         <span class="lang-sm lang-lbl-full" lang="fr"></span>
-      </button>
+      </a>
 
-      <button type="button" class="btn btn-default btn-sm">
+      <a href="/it/index.html" type="button" class="btn btn-default btn-sm">
         <span class="lang-sm lang-lbl-full" lang="it"></span>
-      </button>
-
+      </a>
     </div>
 
 
