--- a/it/activities.html
+++ b/it/activities.html
@@ -11,16 +11,13 @@
     <title>Italy New Energy</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/languages.min.css"/>
 
     <!-- Custom styles for this template -->
-    <link href="css/narrow.css" rel="stylesheet">
+    <link href="/css/narrow.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="js/bootstrap.js"></script>
-
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="js/ie-emulation-modes-warning.js"></script>
+    <script src="/js/bootstrap.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -30,24 +27,36 @@
   </head>
 
   <body>
+    <div style="text-align: center; padding: 20px;">
+      <a href="/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full active" lang="en"></span>
+      </a>
 
+      <a href="/fr/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full" lang="fr"></span>
+      </a>
+
+      <a href="/it/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full" lang="it"></span>
+      </a>
+    </div>
     <div class="container">
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation"><a href="index.html">Home</a></li>
-            <li role="presentation"><a href="company.html">Company</a></li>
-            <li role="presentation" class="active"><a href="activities.html">Activities</a></li>
-            <li role="presentation"><a href="news.html">News</a></li>
-            <li role="presentation"><a href="mailto:contact@italynewenergy.net">Contact</a></li>
+            <li role="presentation"><a href="index.html">Casa</a></li>
+            <li role="presentation"><a href="company.html">Società</a></li>
+            <li role="presentation" class="active"><a href="activities.html">Attività</a></li>
+            <li role="presentation"><a href="news.html">Notizie</a></li>
+            <li role="presentation"><a href="mailto:contact@italynewenergy.net">Contatto</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted"><img src="img/logo.gif"></h3>
+        <h3 class="text-muted"><img src="/img/logo.gif"></h3>
       </div>
 
       <ol class="breadcrumb">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="activites.html" class="active">Activities</a></li>
+        <li><a href="index.html">Casa</a></li>
+        <li><a href="activites.html" class="active">Attività</a></li>
       </ol>
       <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
               <ol class="carousel-indicators">
@@ -56,55 +65,48 @@
               </ol>
               <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                  <img src="img/visual.jpg" />
+                  <img src="/img/visual.jpg" />
                 </div>
               </div>
             </div>
             <div class="page-header">
-              <h1>Activites</h1>
+              <h1>Attività</h1>
             </div>
 
 
 <ul class="nav nav-pills">
-  <li class="active"><a data-toggle="pill" href="#home">Energy</a></li>
-  <li><a data-toggle="pill" href="#menu1">Gas</a></li>
+  <li class="active"><a data-toggle="pill" href="#home">Energia</a></li>
+  <li><a data-toggle="pill" href="#menu1">Gaz</a></li>
   <li><a data-toggle="pill" href="#menu2">Services</a></li>
 </ul>
 
 <div class="tab-content">
   <div id="home" class="tab-pane fade in active">
-    <h3>Energy</h3>
+    <h3>Energia</h3>
 <p>
-  Italy New Energy is a wholesaler in the Italian electric power market. We are involved in electric power trading for companies and operate on the Italian Power Exchange.
+  Italia Nuova Energia è un grossista nel mercato elettrico italiano. Siamo impegnati nel commercio di energia elettrica per le imprese e operare sulla Borsa elettrica italiana.
 </p>
-
   </div>
   <div id="menu1" class="tab-pane fade">
     <h3>Gas</h3>
 
   <p>
+    Siamo attivi nel mercato del gas anche. Italia Nuova Energia è un grossista di gas naturale sul mercato italiano. Come è autorizzato a vendere agli utenti finali.
 
-              We are also active in the gas market. Italy New Energy is a natural gas wholesaler in the Italian market. As it is authorized to sell to end users.
   <p>
 
   </div>
   <div id="menu2" class="tab-pane fade">
-    <h3>Services</h3>
-
+    <h3>Servizi</h3>
   <p>
-  Italy New Energy offers companies not only electric power and gas. Our close relationship with the most important European electric power and gas producers and traders, allows us to offer competitive prices.
+    Italia Nuova Energia offre alle aziende non solo energia elettrica e gas. La nostra stretta relazione con i più importanti produttori e commercianti di energia elettrica e del gas europei, ci permette di offrire prezzi competitivi.
 </p><p>
-  We can identify the best electricity and gas supply proposals, by comparing the various offers and evaluating potential savings. We can keep our clients updated on changes in laws and regulations on a timely basis, analyze the feasibility of new production plants and the revamping of existing facilities, and optimize plant operations in terms of cost efficiency and environmental compliance. What's more, we promote energy saving initiatives, manage the need for and availability and trading of green certificates (Italy New Energy's and other producers'), and coordinate and manage “Emission Trading”, the trading of CO 2 emissions credits.
+  Siamo in grado di individuare le migliori proposte fornitura di energia elettrica e di gas, confrontando le varie offerte e valutare potenziali risparmi. Siamo in grado di mantenere i nostri clienti aggiornati sui cambiamenti delle leggi e dei regolamenti in maniera tempestiva, analizzare la fattibilità di nuovi impianti di produzione e il revamping di impianti esistenti e ottimizzare il funzionamento degli impianti in termini di efficienza dei costi e rispetto ambientale. Cosa c'è di più, promuoviamo iniziative per il risparmio energetico, la gestione la necessità e la disponibilità e il commercio di certificati verdi (Italia Nuovo di Energia e di altri produttori '), e coordinare e gestire "Emission Trading", lo scambio di crediti di emissione di CO 2.
+
 </p>
+
   </div>
 </div>
-
-
-
-
-
-
-
 
       <div class="row marketing">
         <div class="col-lg-6">
@@ -118,9 +120,18 @@
       </footer>
 
     </div> <!-- /container -->
+    <div style="text-align: center; padding: 20px;">
+      <a href="/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full active" lang="en"></span>
+      </a>
 
+      <a href="/fr/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full" lang="fr"></span>
+      </a>
 
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="js/ie10-viewport-bug-workaround.js"></script>
+      <a href="/it/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full" lang="it"></span>
+      </a>
+    </div>
   </body>
 </html>
