--- a/it/company.html
+++ b/it/company.html
@@ -11,14 +11,12 @@
     <title>Italy New Energy</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/narrow.css" rel="stylesheet">
+    <link href="/css/narrow.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/languages.min.css"/>
 
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -28,24 +26,36 @@
   </head>
 
   <body>
+    <div style="text-align: center; padding: 20px;">
+      <a href="/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full active" lang="en"></span>
+      </a>
 
+      <a href="/fr/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full" lang="fr"></span>
+      </a>
+
+      <a href="/it/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full" lang="it"></span>
+      </a>
+    </div>
     <div class="container">
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation"><a href="index.html">Home</a></li>
-            <li role="presentation" class="active"><a href="company.html">Company</a></li>
-            <li role="presentation"><a href="activities.html">Activities</a></li>
-            <li role="presentation"><a href="news.html">News</a></li>
-            <li role="presentation"><a href="mailto:contact@italynewenergy.net">Contact</a></li>
+            <li role="presentation"><a href="index.html">Casa</a></li>
+            <li role="presentation" class="active"><a href="company.html">Società</a></li>
+            <li role="presentation"><a href="activities.html">Attività</a></li>
+            <li role="presentation"><a href="news.html">Notizie</a></li>
+            <li role="presentation"><a href="mailto:contact@italynewenergy.net">Contatto</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted"><img src="img/logo.gif"></h3>
+        <h3 class="text-muted"><img src="/img/logo.gif"></h3>
       </div>
 
       <ol class="breadcrumb">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="company.html" class="active">Company</a></li>
+        <li><a href="index.html">Casa</a></li>
+        <li><a href="company.html" class="active">Società</a></li>
       </ol>
       <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
               <ol class="carousel-indicators">
@@ -54,24 +64,20 @@
               </ol>
               <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                  <img src="img/visual.jpg" />
+                  <img src="/img/visual.jpg" />
                 </div>
               </div>
             </div>
             <div class="page-header">
-              <h1>Italy New Energy <small class="blue">Profile</small></h1>
+              <h1>Italy New Energy <small class="blue">Profilo</small></h1>
             </div>
 
             <p>
-
-Italy New Energy is an Italian company founded in 2001.Italy New Energy  is one of the leading suppliers of integrated products and services-from the supply of electric power and natural gas to the production of hydroelectric and thermoelectric energy and the development of projects and businesses in the renewable energy sectors.
-</p>
-<p>
-Italy New Energy can provide services and consulting in the following fields: energy-saving project management and promotion, CO 2 emission shares and rights management, white and green certificate trading and power requirement management, and electricity and gas supply proposal evaluation and rating.
-
-
-
-          </p>
+              Italia Nuova Energia è una società italiana fondata nel 2001.Italy Nuova Energia è uno dei principali fornitori di prodotti e servizi integrati, dalla fornitura di energia elettrica e di gas naturale per la produzione di energia idroelettrica e termoelettrica e lo sviluppo di progetti e le imprese dei settori delle energie rinnovabili.
+            </p>
+            <p>
+              Italia Nuova Energia in grado di fornire servizi e consulenza nei seguenti settori: gestione di progetti di risparmio energetico e di promozione, emissioni di CO 2 azioni e diritti di gestione, intermediazione e la richiesta di potenza certificato gestione bianco e verde, e di energia elettrica e gas valutazione delle proposte e valutazione.
+            </p>
 
 
       <div class="row marketing">
@@ -86,9 +92,18 @@ Italy New Energy can provide services and consulting in the following fields: en
       </footer>
 
     </div> <!-- /container -->
+    <div style="text-align: center; padding: 20px;">
+      <a href="/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full active" lang="en"></span>
+      </a>
 
+      <a href="/fr/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full" lang="fr"></span>
+      </a>
 
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="js/ie10-viewport-bug-workaround.js"></script>
+      <a href="/it/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full" lang="it"></span>
+      </a>
+    </div>
   </body>
 </html>
