--- a/it/news.html
+++ b/it/news.html
@@ -11,14 +11,12 @@
     <title>Italy New Energy</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/narrow.css" rel="stylesheet">
+    <link href="/css/narrow.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/languages.min.css"/>
 
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -28,24 +26,36 @@
   </head>
 
   <body>
+    <div style="text-align: center; padding: 20px;">
+      <a href="/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full active" lang="en"></span>
+      </a>
 
+      <a href="/fr/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full" lang="fr"></span>
+      </a>
+
+      <a href="/it/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full" lang="it"></span>
+      </a>
+    </div>
     <div class="container">
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation"><a href="index.html">Home</a></li>
-            <li role="presentation"><a href="company.html">Company</a></li>
-            <li role="presentation"><a href="activities.html">Activities</a></li>
-            <li role="presentation" class="active"><a href="news.html">News</a></li>
-            <li role="presentation"><a href="mailto:contact@italynewenergy.net">Contact</a></li>
+            <li role="presentation"><a href="index.html">Casa</a></li>
+            <li role="presentation"><a href="company.html">Società</a></li>
+            <li role="presentation"><a href="activities.html">Attività</a></li>
+            <li role="presentation" class="active"><a href="news.html">Notizie</a></li>
+            <li role="presentation"><a href="mailto:contact@italynewenergy.net">Contatto</a></li>
           </ul>
         </nav>
-        <h3 class="text-muted"><img src="img/logo.gif"></h3>
+        <h3 class="text-muted"><img src="/img/logo.gif"></h3>
       </div>
 
       <ol class="breadcrumb">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="news.html" class="active">News</a></li>
+        <li><a href="index.html">Casa</a></li>
+        <li><a href="news.html" class="active">Notizie</a></li>
       </ol>
       <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
               <ol class="carousel-indicators">
@@ -54,42 +64,45 @@
               </ol>
               <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                  <img src="img/visual.jpg" />
+                  <img src="/img/visual.jpg" />
                 </div>
               </div>
             </div>
 
             <div class="page-header">
-              <h1>News and Highlights <small class="blue">Green energy</small></h1>
+              <h1>Notizie e Sintesi <small class="blue">Green energy</small></h1>
             </div>
 
-<div class="media">
-<div class="media-left">
-<a href="#">
-  <img class="media-object" alt="64x64" src="img/plant.jpg" data-holder-rendered="true" style="width: 300px;">
-</a>
-</div>
-<div class="media-body">
-<h4 class="media-heading">Global carbon emissions stall in 2014</h4>
-<p>Global emissions of climate-warming carbon dioxide did not rise last year for the first time in 40 years without the presence of an economic crisis.
-In a sign that efforts to tackle climate change may have been more effective than thought, the International Energy Agency found global emissions of carbon dioxide, the leading greenhouse gas, did not rise in 2014.</p>
-</p>
-<p><a href="http://www.ft.com/cms/s/0/1f56f0d2-c8cc-11e4-8617-00144feab7de.html#axzz3ghSKiBJs" target="_blank">Read more...</a></p>
-</div>
-</div>
 
-<div class="media">
-<div class="media-left">
-<a href="#">
-<img class="media-object" alt="64x64" src="img/solar.png" data-holder-rendered="true" style="width: 300px;">
-</a>
-</div>
-<div class="media-body">
-<h4 class="media-heading">Utility Solar May Cost Less, But It’s Also Worth Less</h4>
-<p>John Farrell disputes a new study showing that utility-scale solar is the cheapest option.    </p>
-<p><a href="http://www.greentechmedia.com/articles/read/utility-solar-may-cost-less-but-its-also-worth-less" target="_blank">Read more...</a></p>
-</div>
-</div>
+            <div class="media">
+            <div class="media-left">
+        <a href="http://www.ft.com/cms/s/0/1f56f0d2-c8cc-11e4-8617-00144feab7de.html#axzz3ghSKiBJs" target="_blank">
+              <img class="media-object" alt="64x64" src="/img/plant.jpg" data-holder-rendered="true" style="width: 300px;">
+            </a>
+            </div>
+            <div class="media-body">
+            <h4 class="media-heading">Le emissioni globali di carbonio stallo nel 2014</h4>
+            <p>
+              Le emissioni globali di clima-riscaldamento anidride carbonica non sono aumentati lo scorso anno per la prima volta in 40 anni senza la presenza di una crisi economica.
+    In un segno che gli sforzi per affrontare i cambiamenti climatici possono essere stati più efficaci di quanto si pensasse, l'Agenzia internazionale per l'energia ha trovato le emissioni globali di anidride carbonica, il gas principale serra, non aumentare nel 2014.
+            </p>
+            </p>
+            <p><a href="http://www.ft.com/cms/s/0/1f56f0d2-c8cc-11e4-8617-00144feab7de.html#axzz3ghSKiBJs" target="_blank">Per saperne di più...</a></p>
+            </div>
+            </div>
+
+            <div class="media">
+            <div class="media-left">
+            <a href="http://www.greentechmedia.com/articles/read/utility-solar-may-cost-less-but-its-also-worth-less" target="_blank">
+            <img class="media-object" alt="64x64" src="/img/solar.png" data-holder-rendered="true" style="width: 300px;">
+            </a>
+            </div>
+            <div class="media-body">
+            <h4 class="media-heading">Solar Utility può costare meno, ma è anche la pena di meno</h4>
+            <p>John Farrell contesta un nuovo studio mostra che Solar Utility scala è l'opzione più economica.</p>
+            <p><a href="http://www.greentechmedia.com/articles/read/utility-solar-may-cost-less-but-its-also-worth-less" target="_blank">Per saperne di più...</a></p>
+            </div>
+            </div>
 
 
       <div class="row marketing">
@@ -104,9 +117,18 @@ In a sign that efforts to tackle climate change may have been more effective tha
       </footer>
 
     </div> <!-- /container -->
+    <div style="text-align: center; padding: 20px;">
+      <a href="/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full active" lang="en"></span>
+      </a>
 
+      <a href="/fr/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full" lang="fr"></span>
+      </a>
 
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="js/ie10-viewport-bug-workaround.js"></script>
+      <a href="/it/index.html" type="button" class="btn btn-default btn-sm">
+        <span class="lang-sm lang-lbl-full" lang="it"></span>
+      </a>
+    </div>
   </body>
 </html>
