--- a/activities.html
+++ b/activities.html
@@ -15,6 +15,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/narrow.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/languages.min.css"/>
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="js/bootstrap.js"></script>
 
@@ -95,14 +96,6 @@
 </p>
   </div>
 </div>
-
-
-
-
-
-
-
-
       <div class="row marketing">
         <div class="col-lg-6">
 
