--- a/company.html
+++ b/company.html
@@ -15,7 +15,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/narrow.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="css/languages.min.css"/>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
