--- a/activities.html
+++ b/activities.html
@@ -5,9 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Italy New Energy is an Italian company founded in 2001.Italy New Energy  is one of the leading suppliers of integrated products and services-from the supply of electric power and natural gas to the production of hydroelectric and thermoelectric energy and the development of projects and businesses in the renewable energy sectors.">
+    <meta name="author" content="Italy New Energy">
     <title>Italy New Energy</title>
 
     <!-- Bootstrap core CSS -->
